@@ -1,3 +1,8 @@
+2011-05-13 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>, Stefan Guindon <stefan.guindon@cern.ch>, Johannes Erdmann <johannes.erdmann@cern.ch>
+
+	* bug fix - erased obsolete (and buggy) LikelioodBase::BTaggingProbability()
+	* tag KLFitter-00-04-12
+
 2011-05-11 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
 
 	* LikelihoodBase: SetBTagging sets all neccessary values
